# ChangeLog for dev-libs/libee
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libee-0.1.0 (23 Jan 2011)

  23 Jan 2011; A. Vinogradov <spamslepnoga@inbox.ru> +libee-0.1.0.ebuild,
  +metadata.xml:
  initial commit
