@@ -1,4 +1,4 @@
 DIST libee-0.1.0.tar.gz 352606 RMD160 ab662d53bccbfc9e34215bec53c7bb3b0d03186d SHA1 3a1668a71d4296db26e58b1c8db84da3d0830040 SHA256 8c29de35bc41fbf7dd2f76274e4b4ff5c67e3b90ccc9a7731d3d0ceee6b91994
-EBUILD libee-0.1.0.ebuild 732 RMD160 38962ee6c81c2019258d081e0d8253495546cb96 SHA1 64420f22f2cdddac77a1734e7c820aab25dd9c14 SHA256 8f6e99f9a77cd1843805fcb14abfd7881ca01d9914782f0825ddff0a570a2518
-MISC ChangeLog 252 RMD160 8f72077ac59a9836b2264fe23b290e20d15f145a SHA1 8a3150168badd0a680265acdd5206a827d28c679 SHA256 6beddaaaceed8b24225e66ba6158896aefc8b3b1e7987cbc998230370ccf02b9
+EBUILD libee-0.1.0.ebuild 737 RMD160 9b15b000b5b78a30cbe7b7d442e186c10b6e60bd SHA1 36df9672fc3da0186f1c12b1ab1f02f0869905de SHA256 24b4eb5df9ca7964a7ec0336a5c558d4f90ac2e29a2ff15fbf4dc27395b6c911
+MISC ChangeLog 353 RMD160 66f4337f66ed37817048652f46f3a9cfcad2b3bd SHA1 5f26ef24690ac3e48968ae8ee7053c73bf9f793a SHA256 7644d7601cc6939a65464c97555f58197cc126595e3941ca131acd27d3949903
 MISC metadata.xml 377 RMD160 ce767371896b6d24b8e6fc891256937d9ffceacd SHA1 a667a6f37ef371cbfa7c10a112237100b212c448 SHA256 fccfb0b585228a744b96800c0f70c2d4d5037ab6e7a9f262dccf81b2324cf3e4
