@@ -1,4 +1,4 @@
 DIST libestr-0.1.0.tar.gz 311934 RMD160 b2660669e849d5ddcfb7bb377b6a41ea3853c208 SHA1 67955fd312d31973472d431b27161fc0107df082 SHA256 9fcbe41323a4a62bce695776b80aee3512db99ebdd9b9ee0de4a8d8aeb187972
-EBUILD libestr-0.1.0.ebuild 604 RMD160 9d3d906d119c587a504a0bc1102fe281f59ab12a SHA1 0df2701b866add9c6c9188285bf20a7c5c370fe1 SHA256 513893d8da1f3b44f2a1aeb8c2edd98fbd93a1a73cf0adc9a0a4afe94b040bd3
-MISC ChangeLog 258 RMD160 ec6290e3f9ce2be10d77459b3cac11d3b8f92f2c SHA1 ed2b5915195eb50262f6e1c45c4773cd51906152 SHA256 529e4d2da133fc5384efa5896e42d1801642a50328179f2741f82cd3f8315bd1
+EBUILD libestr-0.1.0.ebuild 609 RMD160 0c63d4e9a1d32574b5f6d27b0b3b65128f5b8e8d SHA1 6031c714298145034964a14351d3877858a48bd5 SHA256 70637370700227461d7063e670de2f7bebb62bd454f0b1dd3b64659bda8c8253
+MISC ChangeLog 361 RMD160 e93d7334d5e05ce72190a4d9926c972b86156e0d SHA1 ca2303b79c9a8a7e329c953280e008a134028863 SHA256 07a78a36dc8763be74efa3bb8acade09fd1e94965e615426a8810f298d6a2fbb
 MISC metadata.xml 291 RMD160 90793a2e33e7b2706b24a89ce5818f596eeaeba0 SHA1 74fb2c4be6ff4fa34821b50cb15b9a6e9380ba31 SHA256 209aef22b3bb98114e1bcb77fbe64e7e6f1c327cc9a973b4a2310b2c286a7f1f
