@@ -1,4 +1,4 @@
 DIST liblognorm-0.1.0.tar.gz 314269 RMD160 502dce5fb5dd3fb18626cde49dc81c41679e6d28 SHA1 af43f23c1036e77e64b4766dc3bbb890574cc236 SHA256 6444e0886645e58a2210da3f5d7ea8cf81c72c0947ef93338fc901f47fa429dc
-EBUILD liblognorm-0.1.0.ebuild 682 RMD160 4dfd4166e21875c62c3a91196c4e24bfb18628dd SHA1 18afd0bc905d295322eba6872de6098e3289fabc SHA256 0b8ff3be015c2276623648b9035959358840245a5ed849b196c71e9c485d7d39
-MISC ChangeLog 267 RMD160 7527fda83c62a81a41071ed4a6ef2c53d96c73ab SHA1 f6768a688f5ff65dd630cab1512741351c8e6e2a SHA256 8bd4283383ee84ee4ad2ab49c33819aa0dd406b05485140dd047ddfaef736ebb
+EBUILD liblognorm-0.1.0.ebuild 687 RMD160 f46d9b9fe973cd94df08c4a796408ea5655af10f SHA1 83f9c6f47e72f27c5c1df13578ba9fe77fa94965 SHA256 f6e223fb985350dca8711f910f6c0224626486afb860b7b837a94830d27f590a
+MISC ChangeLog 373 RMD160 3af2674ed5bcaf23653edbf868c4f8c5502c3076 SHA1 ac801596579907c25b070d7957674fd5ff2e3b55 SHA256 74a65ea3657a3525a5a804ceb85bf1013e7c6aef69173e6915b46b130f3aa11a
 MISC metadata.xml 314 RMD160 a5abef4d74ab999db1ec9bdc929cb063948562d3 SHA1 1587ccf094a318674b99a60c6ce85cc9ab2c5326 SHA256 e7fbc6c39cad6f06131d1220a22e353a4b1a81d20ddea0fe70e19e32530b4142
